--- a/assets/css/sass/base/_typography.scss
+++ b/assets/css/sass/base/_typography.scss
@@ -1,4 +1,4 @@
-body {
+.landing-container {
     font-family: 'OpenSans-Regular', sans-serif;
     /* font-size: 16px; */
     line-height: 1.7;
