--- a/assets/css/sass/layout/_wrapper.scss
+++ b/assets/css/sass/layout/_wrapper.scss
@@ -1,10 +1,10 @@
 .split {
-  position: absolute;
   width: 50%;
-  height: 100%;
   overflow: hidden;
 }
 
 .wrapper {
-  padding: 8rem 7.5rem;
+  max-width: 50vw;
+  padding: 5.5rem 0;
+  display: inline-block;
 }
