--- a/assets/css/sass/pages/_home.scss
+++ b/assets/css/sass/pages/_home.scss
@@ -1,34 +1,32 @@
 .landing-container {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  
+  display: flex;
+  flex-direction: row;
+
+
   &__left {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     background-color: $black;
-    color: $white;
-    left:0;
 
     > img {
-      position: absolute;
+      top: -13rem;
+      position: relative;  
       width: 16vw;
-      left: 50%;
-      top: 11%;
-      transform: translateX(-50%);
     }
 
     > h1 {
       font-size: 2.5vw;
+      color: $white;
       font-family: 'OpenSans-Light';
-      position: absolute;
       font-weight: 500;
-      left: 50%;
-      top: 50%;
       width: 100%;
       text-align: center;
-      transform: translateX(-50%);
+      line-height: 4vh;
 
       > span {
-        display:block;
+        display: block;
 
         > span {
           font-family: 'OpenSans-Bold';
@@ -41,7 +39,6 @@
 
   &__right {
     color: $black;
-    right: 0;
     background-color: $white;
 
     > div {
@@ -64,34 +61,12 @@
           font-weight: 100;
           padding: 2rem;
           border-bottom: 1px dashed #000;
+          line-height: 2.5vh;
 
-          @media screen and (min-width:790px) and (max-width: 870px) {
-            font-size: 1.1vw !important;
+          > span {
+            display: block;
           }
 
-          @media screen and (min-width:870px) and (max-width: 970px) {
-            font-size: 1.2vw !important;
-          }
-
-          @media screen and (min-width: 970px) and (max-width: 1105px) {
-            font-size: 1.3vw !important;
-          }
-
-          @media screen and (max-width: 1278px) {
-            font-size: 1.4vw;
-          }
-
-          @media screen and (min-width: 1518px) {
-            font-size: 1.6vw;
-          }
-
-          @media screen and (min-width: 1965px) {
-            font-size: 1.7vw;
-          }
-
-          @media screen and (min-width: 2700px) {
-            font-size: 1.8vw;
-          }
         }
 
         > h6 {
